[metadata]
name = elro_connects
author = Bas van den Berg, Johannes Kulick
version = 0.3.3
description = Connects to an Elro Connects K1 Connector and provides MQTT channels from the devices status
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages = find:
scripts =
    bin/elro
install_requires =
    trio
    distmqtt
    getmac
[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-trio
    asynctest
